# Cpp-New-Standards

./: CMakeLists.txt  README.md  TODO
include/: dummy.h  scope.h
src/io/: iomanip.cpp
src/oop/: non_static_data_member_initializer.cpp
src/syntax/: CMakeLists.txt  magic_statics.cpp  noexcept.cpp  range_based_for_loop.cpp
src/type/: user_defined_literals.cpp
tools/: dummy.cpp  scope.cpp
